--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p>Les ateliers pétillants</p>
                     <p>Le parcours pep's</p>
                     <p>Les formations management</p>
-                    <a class="btn-decouverte btn-style1" href="">Je découvre</a>
+                    <a class="btn-decouverte btn-style1 btn-bleu" href="">Je découvre</a>
                 </div>
 
             </div>
@@ -128,7 +128,7 @@
                 <div class="peps2">
                     <p>Le bilan de compétence revisité</p>
                     <p>Individuel et collectif</p>
-                    <a class="btn-decouverte btn-style1" href="">Je découvre</a>
+                    <a class="btn-decouverte btn-style1 btn-jaune" href="">Je découvre</a>
                 </div>
             </div>
 
@@ -140,7 +140,7 @@
                 <div class="peps2">
                     <p>Sales coaching</p>
                     <p>Formation commerciale</p>
-                    <a class="btn-decouverte btn-style1" href="">Je découvre</a>
+                    <a class="btn-decouverte btn-style1 btn-violet" href="">Je découvre</a>
                 </div>
             </div>
         </section>
